--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor/penghai",
+    "name": "vendor/yuanmaketang",
     "description": "first composer",
     "type": "project",
     "license": "MIT",
