--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor/FirstComposer",
+    "name": "vendor/first-composer",
     "description": "first composer",
     "type": "project",
     "license": "MIT",
