--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "wph45@163.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
