--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
     },
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "yuanmaketang\\Hello\\": "src/"
